--- a/projects/project.html
+++ b/projects/project.html
@@ -9,7 +9,7 @@
       <title>Project | Portfolio Website Template | CODEGRID</title>
 
       <!-- stylesheet -->
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="../style.css">
 
       <!-- bootstrap cdns -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -23,8 +23,8 @@
 
 
       <!-- for on scroll animations -->
-      <link rel="stylesheet" href="animate.css">
-      <script src="wow.min.js"></script>
+      <link rel="stylesheet" href="../animate.css">
+      <script src="../wow.min.js"></script>
 
 </head>
 <body>
@@ -33,7 +33,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="../index.html">thomaschimbault</a>
                   </span>
 
                   <ul id="menu">
@@ -142,17 +142,6 @@
             <!--------------- footer starts here --------------->
             <div class="footer">
                   <div class="container">
-                        <br><br>
-
-                        <div class="collab">
-                              <div class="row">
-                                    <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
-                                    </div>
-                              </div>
-                        </div>
-
-                        <br>
 
                         <div class="hr">
                               <div class="row"></div>
@@ -164,7 +153,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @tomx_chlt</h4>
                                           <br><br>
                                     </div>
 
@@ -183,7 +172,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">tchimbault.pro@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
