--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>About Me | Portfolio Website Template | CODEGRID</title>
+      <title>about me.</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -29,12 +29,11 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">thomaschimbault</a>
                   </span>
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
                         <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
@@ -50,7 +49,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
                         <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
@@ -92,17 +90,6 @@
             <!--------------- footer starts here --------------->
             <div class="footer">
                   <div class="container">
-                        <br><br>
-
-                        <div class="collab">
-                              <div class="row">
-                                    <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
-                                    </div>
-                              </div>
-                        </div>
-
-                        <br>
 
                         <div class="hr">
                               <div class="row"></div>
@@ -114,7 +101,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @</h4>
                                           <br><br>
                                     </div>
 
