--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>Contact | Portfolio Website Template | CODEGRID</title>
+      <title>contact me.</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -29,12 +29,11 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">thomaschimbault</a>
                   </span>
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
                         <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
@@ -50,7 +49,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
                         <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
@@ -68,8 +66,8 @@
                         <div class="row">
                               <div class="col-lg-8">
 
-                                    <h3 class="wow fadeInUp" data-wow-delay="1s">say hello 👋</h3><br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.2s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, accusantium sint quod voluptatem dolorum, quaerat, ut iusto cumque magni ab repudiandae, quasi minus unde temporibus nulla eum eaque! Placeat praesentium sunt suscipit laboriosam deserunt commodi atque corporis, iure maiores dicta, fugit similique.</p>
+                                    <h3 class="wow fadeInUp" data-wow-delay="1s">say hello ! 👋</h3><br>
+                                    <p class="wow fadeInUp" data-wow-delay="1.2s">I am always open to hearing about new opportunities so feel free to contact me !</p>
 
                               </div>
                         </div>
@@ -125,17 +123,6 @@
             <!--------------- footer starts here --------------->
             <div class="footer">
                   <div class="container">
-                        <br><br>
-
-                        <div class="collab">
-                              <div class="row">
-                                    <div class="col-lg-12">
-                                          <p class="wow fadeInUp">Got an interesting project? I can help you.</p>
-                                    </div>
-                              </div>
-                        </div>
-
-                        <br>
 
                         <div class="hr">
                               <div class="row"></div>
@@ -147,7 +134,7 @@
                               <div class="row">
                                     <div class="col-lg-4" id="personal">
                                           <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @harrnish</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @tomx_chlt</h4>
                                           <br><br>
                                     </div>
 
@@ -166,7 +153,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">tchimbault.pro@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
