--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>Work | Portfolio Website Template | CODEGRID</title>
+      <title>my work.</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -29,7 +29,7 @@
             <!--------------- navbar starts here --------------->
             <nav>
                   <span id="brand">
-                        <a href="index.html">harrnish</a>
+                        <a href="index.html">thomaschimbault</a>
                   </span>
 
                   <ul id="menu">
