--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 
                                     <div class="col-lg-4" id="address">
                                           <p class="wow fadeInUp" data-wow-delay="0s">say hello</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">harrnish@gmail.com</h4>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">tchimbault.pro@gmail.com</h4>
                                           <br><br>
                                     </div>
                               </div>
