--- a/index.html
+++ b/index.html
@@ -87,7 +87,19 @@
                         <div class="grid-sizer col-sm-6 col-md-3 col-lg-3"></div>
               
 
-                        <div class="col-lg-3 col-sm-6 viz grid-item wow fadeInUp" style="position: absolute; left: 0%; top:0px;">
+                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 0%; top: 0px;">
+                              <div class="projects_item">
+                                <img class="img-fluid w-100" src="images/twitter.png" alt="Twitter Data visualization">
+                                <div class="projects_text">
+                                  <a href="#">
+                                    <h4>Real-time data visualization for tweets sentiment analysis</h4>
+                                  </a>
+                                  <p>(Made in D3.js & Python, 2023)</p>
+                                </div>
+                              </div>
+                        </div>
+
+                        <div class="col-lg-3 col-sm-6 viz grid-item wow fadeInUp" style="position: absolute; left: 33%; top:0px;">
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/body-fat.jpg" alt="Body-Fat Prediction">
                                 <div class="projects_text">
@@ -99,7 +111,7 @@
                               </div>
                             </div>
 
-                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 33%; top: 0px;">
+                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 66%; top: 0px;">
                           <div class="projects_item">
                             <img class="img-fluid w-100" src="images/alpha_waves.png" alt="Alpha Waves Studhy">
                             <div class="projects_text">
@@ -111,7 +123,7 @@
                           </div>
                         </div>
                         
-                        <div class="col-lg-3 col-sm-6 work grid-item wow fadeInUp" style="position: absolute; left: 66%; top: 0px;">
+                        <div class="col-lg-3 col-sm-6 work grid-item wow fadeInUp" style="position: absolute; left: 0%; top: 440px;">
                           <div class="projects_item">
                             <img class="img-fluid w-100" src="images/palette.jpeg" alt="Work on the psychology of colors">
                             <div class="projects_text">
@@ -123,7 +135,7 @@
                           </div>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 0%; top: 320px;">
+                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 33%; top: 320px;">
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/heuristic.png" alt="Heuristic Optimization">
                                 <div class="projects_text">
@@ -135,7 +147,7 @@
                               </div>
                         </div>
 
-                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 33%; top: 410px;">
+                        <div class="col-lg-3 col-sm-6 col-sm-12 viz grid-item wow fadeInUp" style="position: absolute; left: 66%; top: 410px;">
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/depression.png" alt="Heuristic Optimization">
                                 <div class="projects_text">
