--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                   <ul id="menu">
                         <li><a href="index.html"><span>.</span>home</a></li>
-                        <li><a href="about.html"><span>.</span>about me</a></li>
+                        <!--<li><a href="about>.html"><span>.</span>about me</a></li>-->
                         <li><a href="contact.html"><span>.</span>contact</a></li>
                   </ul>
 
@@ -152,7 +152,7 @@
                                 <img class="img-fluid w-100" src="images/depression.png" alt="Heuristic Optimization">
                                 <div class="projects_text">
                                   <a href="#l">
-                                    <h4>Examining the Impact of the Internet on Mental Illness: A Statistical Analysis</h4>
+                                    <h4>Examining the Impact of the Internet on Mental Illness: a Statistical Analysis</h4>
                                   </a>
                                   <p>(Made in R, 2021)</p>
                                 </div>
