--- a/index.html
+++ b/index.html
@@ -244,8 +244,10 @@
 
 
 
+            
             <!--------------- footer starts here --------------->
             <div class="footer">
+
                   <div class="container">
                         <div class="hr">
                               <div class="row"></div>
@@ -255,20 +257,19 @@
 
                         <div class="info">
                               <div class="row">
-                                    <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @tomx_chlt</h4>
+                                    <div class="col-lg-3" id="personal">
+                                          <p class="wow fadeInUp">© Copyright 2023.</p>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">Thomas Chimbault.</h4>
                                           <br><br>
                                     </div>
 
-                                    <div class="col-lg-4" id="media">
+                                    <div class="col-lg-5" id="media">
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
+                                                <a href="https://www.linkedin.com/in/thomaschimbault"><li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">LinkedIn</li></a>
+                                                <a href="https://twitter.com/TomAaAaAaATeau"><li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">Twitter</li></a>
+                                                <a href="https://open.spotify.com/user/mysteriixxx?si=795605ee3d894c9e"><li id="sp" class="wow fadeInUp" data-wow-delay="1s">Spotify</li></a>
                                           </ul>
 
                                           <br><br>
@@ -282,6 +283,7 @@
                               </div>
                         </div>
                   </div>
+
             </div>
             <!--------------- footer ends here --------------->
 
