--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>contact me.</title>
+      <title>contact him, he's a really cool guy.</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="style.css">
@@ -34,7 +34,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -49,7 +48,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -81,8 +79,7 @@
             <div class="container-fluid">
                   <div class="row">
                         <div class="col-lg-8">
-                              <form name="contact-form" id="contact-form" method="post" action="">
-
+                              <form name="contact-form" id="contact-form" method="post" action="send_email.php">
                               <ul>
 
                               <li class="wow fadeInUp" data-wow-delay="1.4s">
