--- a/projects/alphawaves.html
+++ b/projects/alphawaves.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="author" content="harrnish">
 
-      <title>Project | Portfolio Website Template | CODEGRID</title>
+      <title>the best minesweeper ofc.</title>
 
       <!-- stylesheet -->
       <link rel="stylesheet" href="../style.css">
@@ -37,9 +37,7 @@
                   </span>
 
                   <ul id="menu">
-                        <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
+                        <li><a href="../index.html">home<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
 
@@ -54,8 +52,6 @@
 
                   <ul id="menu">
                         <li><a href="index.html">home<span>.</span></a></li>
-                        <li><a href="work.html">work<span>.</span></a></li>
-                        <li><a href="about.html">about me<span>.</span></a></li>
                         <li><a href="contact.html">contact<span>.</span></a></li>
                   </ul>
             </div>
@@ -72,27 +68,31 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Project Name</h1><br><br>
-
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Brain Signal Analysis (EEG Data)</h1><br><br>
                                     <div class="row">
-                                          <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.2s">service :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">Web Development</h6>
+                                          <div class="col-lg-3">
+                                                <p class="wow fadeInUp" data-wow-delay="1.2s">Languages :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.3s">MATLAB & R</h6>
                                           </div>
 
                                           <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.4s">started :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">8 May 2019</h6>
+                                                <p class="wow fadeInUp" data-wow-delay="1.4s">duration :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">December 2021</h6>
                                           </div>
 
-                                          <div class="col-lg-4">
-                                                <p class="wow fadeInUp" data-wow-delay="1.6s">completed :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">15 May 2019</h6>
+                                          <div class="col-lg-5">
+                                                <p class="wow fadeInUp" data-wow-delay="1.6s">links :</p>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">None</h6>
                                           </div>
                                     </div>
                                     <br>
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum officia molestiae laboriosam, rem reprehenderit. Laboriosam quae alias, iure nesciunt dolorum. Eaque, magni, enim. Dolores, provident voluptas dicta commodi vel magni nesciunt sed maiores aperiam illo officiis voluptate at quod, praesentium excepturi enim.</p>
+
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">EEG (electroencephalography) is a technique used to measure brain activity by recording electrical signals from the brain via electrodes placed on the scalp. Alpha waves are a type of brain wave that are associated with a relaxed, alert state and are typically present when the eyes are closed. The purpose of this analysis was to compare the production of alpha waves in the brain when the eyes are closed versus when they are open. The data was collected using EEG and then processed using MATLAB to produce a CSV file. This file was then analyzed in R to compare the alpha wave production between the two conditions. The study was done in two ways, first as an intra-individual study where each participant's alpha waves were compared between the closed and open eyes conditions, and then as an inter-individual study, where alpha waves were compared across different participants. The inter-individual study is more sophisticated as it takes into account the inter-individual variability. The results of this analysis can provide insight into how different visual stimuli affect brain activity and can be used in a variety of fields such as neuroscience, psychology, and medicine.</p> 
                               </div>
+
+                              <img src="../images/eeg_welcome.png" style="padding-top:30px; width:50%; height: 50%; display: block; margin: auto;"alt="minesweeper_welcome" class="wow fadeInUp" data-wow-delay="1.8s">
+
+
                         </div>
                   </div>
             </div>
@@ -119,20 +119,6 @@
 
             <br><br>
 
-            <!--------------- project nav starts here --------------->
-
-            <div class="project-nav">
-                  <div class="container">
-                        <div class="row">
-                              <div class="col-lg-6 prev">
-                                    <p><ion-icon name="arrow-back"></ion-icon>previous</p>
-                              </div>
-                              <div class="col-lg-6 next">
-                                    <p>next<ion-icon name="arrow-forward"></ion-icon></p>
-                              </div>
-                        </div>
-                  </div>
-            </div>
 
             <!--------------- project nav starts here --------------->
 
@@ -141,8 +127,8 @@
 
             <!--------------- footer starts here --------------->
             <div class="footer">
-                  <div class="container">
 
+                  <div class="container">
                         <div class="hr">
                               <div class="row"></div>
                         </div>
@@ -151,20 +137,19 @@
 
                         <div class="info">
                               <div class="row">
-                                    <div class="col-lg-4" id="personal">
-                                          <p class="wow fadeInUp">connect with me</p>
-                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">ig @tomx_chlt</h4>
+                                    <div class="col-lg-3" id="personal">
+                                          <p class="wow fadeInUp">© Copyright 2023.</p>
+                                          <h4 class="wow fadeInUp" data-wow-delay="0.2s">Thomas Chimbault.</h4>
                                           <br><br>
                                     </div>
 
-                                    <div class="col-lg-4" id="media">
+                                    <div class="col-lg-5" id="media">
                                           <p class="wow fadeInUp" data-wow-delay="0s">follow me</p>
 
                                           <ul>
-                                                <li id="fb" class="wow fadeInUp" data-wow-delay="0.4s">fb</li>
-                                                <li id="ig" class="wow fadeInUp" data-wow-delay="0.6s">ig</li>
-                                                <li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">tw</li>
-                                                <li id="yt" class="wow fadeInUp" data-wow-delay="1s">yt</li>
+                                                <a href="https://www.linkedin.com/in/thomaschimbault"><li id="lk" class="wow fadeInUp" data-wow-delay="0.4s">LinkedIn</li></a>
+                                                <a href="https://twitter.com/TomAaAaAaATeau"><li id="tw" class="wow fadeInUp" data-wow-delay="0.8s">Twitter</li></a>
+                                                <a href="https://open.spotify.com/user/mysteriixxx?si=795605ee3d894c9e"><li id="sp" class="wow fadeInUp" data-wow-delay="1s">Spotify</li></a>
                                           </ul>
 
                                           <br><br>
@@ -176,8 +161,10 @@
                                           <br><br>
                                     </div>
                               </div>
+
                         </div>
                   </div>
+
             </div>
 
             <!--------------- footer ends here --------------->
