--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/twitter.png" alt="Twitter Data visualization">
                                 <div class="projects_text">
-                                  <a href="#">
+                                  <a href="projects/tweets_sentiment.html" style="color:black;">
                                     <h4>Real-time data visualization for tweets sentiment analysis</h4>
                                   </a>
                                   <p>(Made in D3.js & Python, 2023)</p>
@@ -103,7 +103,7 @@
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/body-fat.jpg" alt="Body-Fat Prediction">
                                 <div class="projects_text">
-                                  <a href="#">
+                                  <a href="projects/bodyfat_prediction.html" style="color:black;">
                                     <h4>Optimizing Body-Fat Prediction with Multiple Linear Regression</h4>
                                   </a>
                                   <p>(Made in R, 2023)</p>
@@ -115,7 +115,7 @@
                           <div class="projects_item">
                             <img class="img-fluid w-100" src="images/alpha_waves.png" alt="Alpha Waves Studhy">
                             <div class="projects_text">
-                              <a href="#">
+                              <a href="projects/alphawaves.html" style="color:black;">
                                 <h4>Comparing Alpha Wave Production in Closed and Open Eyes using EEG Data</h4>
                               </a>
                               <p>(Made in MATLAB & R, 2022)</p>
@@ -127,7 +127,7 @@
                           <div class="projects_item">
                             <img class="img-fluid w-100" src="images/palette.jpeg" alt="Work on the psychology of colors">
                             <div class="projects_text">
-                              <a href="#">
+                              <a href="projects/emotionandcolors.html" style="color:black;">
                                 <h4>Color-Coded Emotion Analysis of Human Speech Using NLP</h4>
                               </a>
                               <p>(Made in Python, 2022)</p>
@@ -139,7 +139,7 @@
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/heuristic.png" alt="Heuristic Optimization">
                                 <div class="projects_text">
-                                  <a href="#l">
+                                  <a href="projects/heuristic.html" style="color:black;">
                                     <h4>Multi-Environment Heuristic Optimization</h4>
                                   </a>
                                   <p>(Made in C#, 2022)</p>
@@ -151,7 +151,7 @@
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/depression.png" alt="Heuristic Optimization">
                                 <div class="projects_text">
-                                  <a href="#l">
+                                  <a href="projects/depression.html" style="color:black;">
                                     <h4>Examining the Impact of the Internet on Mental Illness: a Statistical Analysis</h4>
                                   </a>
                                   <p>(Made in R, 2021)</p>
@@ -163,7 +163,7 @@
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/mystory.png" alt="Homepage Website myStory">
                                 <div class="projects_text">
-                                  <a href="">
+                                  <a href="projects/myStory.html" style="color:black;">
                                     <h4>Website with interactive stories</h4>
                                   </a>
                                   <p>(Made in HTML/CSS, PHP & JS, 2021)</p>
@@ -176,7 +176,7 @@
                               <div class="projects_item">
                                 <img class="img-fluid w-100" src="images/minesweeper.png" alt="Homepage Website myStory">
                                 <div class="projects_text">
-                                  <a href="">
+                                  <a href="projects/minesweeper.html" style="color:black;">
                                     <h4>A game inspired by the famous minesweeper
                                     </h4>
                                   </a>
