--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <!-- for on scroll animations -->
       <link rel="stylesheet" href="animate.css">
       <script src="wow.min.js"></script>
-
+      
+      <!-- icon of me -->
+      <link rel="icon" href="images/brain.jpeg">
 </head>
 <body>
       <div class="wrapper">
