add of new updates

--- a/projects/tweets_sentiment.html
+++ b/projects/tweets_sentiment.html
@@ -68,7 +68,7 @@
                               <div class="col-lg-12">
                                     <br>
 
-                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Data Visualization using D3</h1><br><br>
+                                    <h1 class="wow fadeInUp" data-wow-delay="1s">Data Visualization - 3D Graph Theory</h1><br><br>
 
                                     <div class="row">
                                           <div class="col-lg-3">
@@ -78,23 +78,24 @@
 
                                           <div class="col-lg-4">
                                                 <p class="wow fadeInUp" data-wow-delay="1.4s">duration :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">December 2022 - Now</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.5s">December 2022 - April 2023</h6>
                                           </div>
 
                                           <div class="col-lg-5">
                                                 <p class="wow fadeInUp" data-wow-delay="1.6s">links :</p>
-                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">None for the moment</h6>
+                                                <h6 class="wow fadeInUp" data-wow-delay="1.7s">
+                                                      <a href="https://github.com/thomaschlt/tweetViz.ai" target="_blank" style="color: black; text-decoration: underline;"><h6 class="wow fadeInUp" data-wow-delay="1.7s">Github</h6></a>
+                                                </h6>
                                           </div>
                                     </div>
                                     <br>
 
-                                    <p class="wow fadeInUp" data-wow-delay="1.8s">This project involves building a real-time sentiment analysis pipeline for tweets using natural language processing techniques. The pipeline includes collecting tweets using the Twitter API, pre-processing the text data, and applying sentiment analysis models to classify tweets as positive, negative or neutral. The pipeline will be implemented using programming languages such as Python, and libraries like NLTK, scikit-learn, and pandas. The real-time aspect of this project is achieved by using a message queue such as Apache Kafka or RabbitMQ to stream tweets and process them in real-time. The analyzed data will then be visualized using D3.js, a JavaScript library for creating interactive data visualizations. The project is currently in progress and not finished yet, with a focus on real-time data processing and visualization.
+                                    <p class="wow fadeInUp" data-wow-delay="1.8s">This project involves building a real-time sentiment analysis pipeline for tweets using natural language processing techniques. The pipeline includes collecting tweets, pre-processing the text data and applying sentiment analysis models to classify tweets as positive, negative or neutral. The pipeline uses Python and Javascript. The analyzed data will then be visualized using D3.js, a JavaScript library for creating interactive data visualizations. The project is available on Github, you can clone the repo and run the code on your local machine.
                                     </p> 
                                           
                               </div>
 
-                              <!--<img src="../images/minesweeper_welcome.png" alt="minesweeper_welcome" class="wow fadeInUp" data-wow-delay="1.8s">-->
-
+                              <img src="../images/tweetViz.png" style="display: block; margin: auto; width: 80%; height: 50%; padding-top: 20px;" alt="heuristic-optimization-Astar" class="wow fadeInUp" data-wow-delay="1.8s">
 
                         </div>
                   </div>
@@ -103,8 +104,8 @@
 
 
             <!--------------- project image section starts here --------------->
-<!--
-            <div class="project-img">
+
+            <!-- <div class="project-img">
                   <div class="container">
                         <br><br>
                         <div class="row">
@@ -116,10 +117,8 @@
                               </div>
                         </div>
                   </div>
-            </div>
-      -->
-
-
+            </div> -->
+     
 
 
 
