--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                   <div class="header">
                         <h1 class="wow fadeInUp">Hey, I'm Thomas Chimbault !</h1><br/>
                         <h1 class="line anim-typewriter">Data & Computer Science student.</h1>
+                        <button class="wow fadeInUp" style="display:inline-block; margin:auto; animation-delay: 1.5s;">Test</button>
+                        <button class="wow fadeInUp" style="display:inline-block; margin:auto; animation-delay: 1.5s;">Test</button>
+
                   </div>
             </div>
 
@@ -80,7 +83,6 @@
 
                   <!--<div class="vertical"></div>-->
                   <br>
-
                   
                   <div class="whitespace"></div>
 
