--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       
       <!-- icon of me -->
       <link rel="icon" href="images/brain.jpeg">
+
+      <!-- material icons -->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
       <div class="wrapper">
@@ -68,8 +72,7 @@
                         <h1 class="wow fadeInUp">Hey, I'm Thomas Chimbault !</h1><br/>
                         <h1 class="line anim-typewriter">Data & Computer Science student.</h1>
                         <div style="text-align:center;">
-                              <button class="wow fadeInUp" style="display:inline-block; margin:auto; animation-delay: 1.5s;"><a href="https://wikipedia.com">Test</a></button>
-                              <button class="wow fadeInUp" style="display:inline-block; margin:auto; animation-delay: 1.5s;">Test</button>      
+                              <a href=""><button class="wow fadeInUp" style="display:inline-block; margin:auto; animation-delay: 1.5s; border-radius:5px; padding:10px;">My online resume</button></a>
                         </div>
                   </div>
             </div>
