--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="hero">
                   <div class="header">
                         <h1 class="wow fadeInUp">Hey, I'm Thomas Chimbault !</h1><br/>
-                        <h1 class="line anim-typewriter">Data & Computer Science student.</h1>
+                        <h1 class="line anim-typewriter">AI Engineer student.</h1>
                   </div>
             </div>
 
